src/main/resources/tests/Semantics/good/operationReturn1.canAda
with Ada.Text_IO; use Ada.Text_IO;
procedure ExampleProcedure is
X : boolean;
begin
   X := True;
end ExampleProcedure;
