src/main/resources/tests/Semantics/bad/operationBool4.canAda
with Ada.Text_IO; use Ada.Text_IO;
procedure ExampleProcedure is
X : boolean;
begin
   X := 't' and 'f';
end ExampleProcedure;
